--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
   h1, h2 , h3 {
     font-weight: 700 !important
   }
+    .img-bot{
+  height: 40px;
+  width: 60px;
+  float: left;
+  margin-right: 10px;
+}
   </style>
 
 
